allows illegal access by cglib