@@ -42,3 +42,10 @@ tasks.javadoc.source "${autoconfigureProjectDir}/src/main/java"
 tasks.withType(Checkstyle) {
     onlyIf { false }
 }
+
+// allows illegal access by cglib
+if (rootProject.ext.testJavaVersion >= 16) {
+    tasks.withType(Test) {
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    }
+}
